--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "generate": "bunx drizzle-kit generate:pg",
     "worker": "tsx src/worker/queue-worker.ts",
     "worker:dev": "tsx watch src/worker/queue-worker.ts",
+    "worker:check": "node check-worker.js",
     "migrate-production": "bun run migrate.mts",
     "migrate-local": "SSL=false LOCAL=true bun run migrate.mts",
     "db-up": "docker-compose up",
