--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,6 @@
     "@algolia/autocomplete-core": "^1.13.0",
     "@aws-sdk/client-s3": "^3.472.0",
     "@aws-sdk/s3-request-presigner": "^3.472.0",
-    "@clerk/nextjs": "^4.29.3",
     "@headlessui/react": "^1.7.17",
     "@headlessui/tailwindcss": "^0.2.0",
     "@hono/swagger-ui": "^0.2.1",
@@ -61,6 +60,8 @@
     "@types/swagger-ui-react": "^4.18.3",
     "@types/uuid": "^9.0.7",
     "acorn": "^8.11.2",
+    "bcryptjs": "^3.0.3",
+    "bullmq": "^5.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -73,6 +74,7 @@
     "flexsearch": "^0.7.31",
     "framer-motion": "^10.16.16",
     "hono": "^3.12.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
     "mdast-util-to-string": "^4.0.0",
@@ -82,6 +84,7 @@
     "ms": "^2.1.3",
     "nanoid": "^5.0.4",
     "next": "14.2",
+    "next-auth": "^4.24.13",
     "next-plausible": "^3.12.0",
     "next-themes": "^0.2.1",
     "next-usequerystate": "^1.13.2",
@@ -111,12 +114,12 @@
     "usehooks-ts": "^2.9.4",
     "uuid": "^9.0.1",
     "zod": "^3.22.4",
-    "zustand": "^4.4.7",
-    "bullmq": "^5.0.0",
-    "ioredis": "^5.3.2"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -128,9 +131,8 @@
     "postcss": "^8",
     "postgres": "^3.4.3",
     "sharp": "^0.33.1",
-    "@types/ioredis": "^5.0.0",
-    "tsx": "^4.7.0",
     "tailwindcss": "^3.3.0",
+    "tsx": "^4.7.0",
     "typescript": "^5"
   }
 }
